--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Psicóloga Daniela Lins
+description: Site para divulgação do meu trabalho como psicóloga e informações de contato.
