--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ title: Psicóloga Daniela Lins
 description: Site para divulgação do meu trabalho como psicóloga e informações de contato.
 
 # propriedades do site
-whatsapp-number: 41987237281
+whatsapp-link: https://api.whatsapp.com/send?phone=5541987237281&text=Me conte mais sobre o seu trabalho!
