--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ title: Psicóloga Daniela Lins
 description: Site para divulgação do meu trabalho como psicóloga e informações de contato.
 
 # propriedades do site
-whatsapp-link: https://api.whatsapp.com/send?phone=5541987237281&text=Me conte mais sobre o seu trabalho!
+whatsapp-link: https://api.whatsapp.com/send?phone=5541987237281&text=Me conte mais sobre o seu trabalho
+whatsapp-number-text: (41) 9 8723 - 7281
